[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muse"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abhay Deshpande" },
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.scripts]
muse = "muse.main:main"

[tool.ruff]
line-length = 150
